--- a/css/styles.css
+++ b/css/styles.css
@@ -54,6 +54,7 @@ nav {
   height: 80px;
   background-color: #252831;
   text-align:center;
+  display: flex;
 }
 nav h1 {
   margin: auto;
@@ -102,6 +103,7 @@ nav h1 a {
   height: 400px;
   width: 100%;
   background-color: #ccc;
+  display: flex;
 }
 /* ====================== Restaurant Filtering ====================== */
 .filter-options {
@@ -116,6 +118,7 @@ nav h1 a {
   font-weight: normal;
   line-height: 1;
   margin: 0 20px;
+  display: flex;
 }
 .filter-options select {
   background-color: white;
@@ -136,6 +139,8 @@ nav h1 a {
   margin: 0;
   padding: 30px 15px 60px;
   text-align: center;
+  display: inline-flex;
+  flex-wrap: wrap;
 }
 #restaurants-list li {
   background-color: #fff;
