--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,12 @@
 @charset "utf-8";
 /* CSS Document */
+/* .container,
+#container,
+#maincontent {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+} */
 
 body,
 td,
@@ -9,12 +16,13 @@ p {
   font-size: 10pt;
   color: #333;
   line-height: 1.5;
+  flex-wrap: wrap;
 }
 
 body {
   background-color: #fdfdfd;
   margin: 0;
-  position: relative;
+  /* position: relative; */
 }
 
 ul,
@@ -22,21 +30,29 @@ li {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 10pt;
   color: #333;
+  flex-direction: column;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 a {
   color: orange;
   text-decoration: none;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 a:hover,
 a:focus {
   color: #3397db;
   text-decoration: none;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 a img {
   border: none 0px #fff;
+  object-fit: contain;
 }
 
 h1,
@@ -47,6 +63,8 @@ h5,
 h6 {
   font-family: Arial, Helvetica, sans-serif;
   margin: 0 0 20px;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 article,
@@ -61,12 +79,18 @@ hgroup,
 menu,
 nav,
 section {
-  display: block;
+  /* display: block; */
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
 }
 
 #maincontent {
   background-color: #f3f3f3;
   min-height: 100%;
+  flex-direction: column;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 #footer {
@@ -77,6 +101,8 @@ section {
   padding: 25px;
   text-align: center;
   text-transform: uppercase;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 /* ====================== Navigation ====================== */
@@ -87,10 +113,13 @@ nav {
   background-color: #252831;
   text-align: center;
   display: flex;
+  flex-wrap: wrap;
 }
 
 nav h1 {
   margin: auto;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 nav h1 a {
@@ -99,6 +128,8 @@ nav h1 a {
   font-weight: 200;
   letter-spacing: 10px;
   text-transform: uppercase;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 #breadcrumb {
@@ -108,12 +139,15 @@ nav h1 a {
   font-size: 17px;
   margin: 0;
   width: calc(50% - 80px);
+  display: flex;
+  flex-wrap: wrap;
 }
 
 /* Display list items side by side */
 
 #breadcrumb li {
-  display: inline;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 /* Add a slash symbol (/) before/behind each list item */
@@ -122,6 +156,8 @@ nav h1 a {
   padding: 8px;
   color: black;
   content: "/\00a0";
+  display: flex;
+  flex-wrap: wrap;
 }
 
 /* Add a color to all links inside the list */
@@ -129,6 +165,8 @@ nav h1 a {
 #breadcrumb li a {
   color: #0275d8;
   text-decoration: none;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 /* Add a color on mouse-over */
@@ -136,6 +174,8 @@ nav h1 a {
 #breadcrumb li a:hover {
   color: #01447e;
   text-decoration: underline;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 /* ====================== Map ====================== */
@@ -144,207 +184,206 @@ nav h1 a {
   height: 400px;
   width: 100%;
   background-color: #ccc;
-  display: flex;
-}
-
-/* ====================== Restaurant Filtering ====================== */
-
-.filter-options {
-  width: 100%;
-  height: 50px;
-  background-color: #3397DB;
-  align-items: center;
-  display: inline-flex;
-  justify-content: center;
-}
-
-.filter-options h2 {
-  color: white;
-  font-size: 1rem;
-  font-weight: normal;
-  line-height: 1;
-  margin: 0 20px;
-  display: flex;
-}
-
-.filter-options select {
-  background-color: white;
-  border: 1px solid #fff;
-  font-family: Arial, sans-serif;
-  font-size: 11pt;
-  height: 35px;
-  letter-spacing: 0;
-  margin: 10px;
-  padding: 0 10px;
-  width: 200px;
-}
-
-/* ====================== Restaurant Listing ====================== */
-
-#restaurants-list {
-  background-color: #f3f3f3;
-  list-style: outside none none;
-  margin: 0;
-  padding: 30px 15px 60px;
-  text-align: center;
-  display: inline-flex;
   flex-wrap: wrap;
-  justify-content: space-evenly;
-}
-
-#restaurants-list li {
-  background-color: #fff;
-  border: 2px solid #ccc;
-  font-family: Arial, sans-serif;
-  margin: 15px;
-  min-height: 380px;
-  padding: 0 30px 25px;
-  text-align: left;
-  width: 270px;
-}
-
-#restaurants-list .restaurant-img {
-  background-color: #ccc;
-  display: block;
-  margin: 0;
-  max-width: 100%;
-  min-height: 248px;
-  min-width: 100%;
-}
-
-#restaurants-list li h1 {
-  color: #f18200;
-  font-family: Arial, sans-serif;
-  font-size: 14pt;
-  font-weight: 200;
-  letter-spacing: 0;
-  line-height: 1.3;
-  margin: 20px 0 10px;
-  text-transform: uppercase;
-}
-
-#restaurants-list p {
-  margin: 0;
-  font-size: 11pt;
-}
-
-#restaurants-list li a {
-  background-color: orange;
-  border-bottom: 3px solid #eee;
-  color: #fff;
-  display: inline-block;
-  font-size: 10pt;
-  margin: 15px 0 0;
-  padding: 8px 30px 10px;
-  text-align: center;
-  text-decoration: none;
-  text-transform: uppercase;
-}
-
-/* ====================== Restaurant Details ====================== */
-
-.inside header {
-  position: fixed;
-  top: 0;
-  width: 100%;
-  z-index: 1000;
-}
-
-.inside #map-container {
-  background: blue none repeat scroll 0 0;
-  height: 87%;
-  position: fixed;
-  right: 0;
-  top: 80px;
-  width: 50%;
-}
-
-.inside #map {
-  background-color: #ccc;
-  height: 100%;
-  width: 100%;
-}
-
-.inside #footer {
-  bottom: 0;
-  position: absolute;
-  width: 50%;
-}
-
-#restaurant-name {
-  color: #f18200;
-  font-family: Arial, sans-serif;
-  font-size: 20pt;
-  font-weight: 200;
-  letter-spacing: 0;
-  margin: 15px 0 30px;
-  text-transform: uppercase;
-  line-height: 1.1;
-}
-
-#restaurant-img {
-  width: 90%;
-}
-
-#restaurant-address {
-  font-size: 12pt;
-  margin: 10px 0px;
-}
-
-#restaurant-cuisine {
-  background-color: #333;
-  color: #ddd;
-  font-size: 12pt;
-  font-weight: 300;
-  letter-spacing: 10px;
-  margin: 0 0 20px;
-  padding: 2px 0;
-  text-align: center;
-  text-transform: uppercase;
-  width: 90%;
-}
-
-#restaurant-container,
-#reviews-container {
-  border-bottom: 1px solid #d9d9d9;
-  border-top: 1px solid #fff;
-  padding: 140px 40px 30px;
-  width: 50%;
-}
-
-#reviews-container {
-  padding: 30px 40px 80px;
-}
-
-#reviews-container h2 {
-  color: #f58500;
-  font-size: 24pt;
-  font-weight: 300;
-  letter-spacing: -1px;
-  padding-bottom: 1pt;
-}
-
-#reviews-list {
-  margin: 0;
-  padding: 0;
-}
-
-#reviews-list li {
-  background-color: #fff;
-  border: 2px solid #f3f3f3;
-  display: block;
-  list-style-type: none;
-  margin: 0 0 30px;
-  overflow: hidden;
-  padding: 0 20px 20px;
-  position: relative;
-  width: 85%;
-}
-
-#reviews-list li p {
-  margin: 0 0 10px;
-}
-
-#restaurant-hours td {
-  color: #666;
-}
+  /* ====================== Restaurant Filtering ====================== */
+  .filter-options {
+    width: 100%;
+    height: 50px;
+    background-color: #3397DB;
+    align-items: center;
+    display: inline-flex;
+    justify-content: center;
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .filter-options h2 {
+    color: white;
+    font-size: 1rem;
+    font-weight: normal;
+    line-height: 1;
+    margin: 0 20px;
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .filter-options select {
+    background-color: white;
+    border: 1px solid #fff;
+    font-family: Arial, sans-serif;
+    font-size: 11pt;
+    height: 35px;
+    letter-spacing: 0;
+    margin: 10px;
+    padding: 0 10px;
+    width: 200px;
+    display: flex;
+    flex-wrap: wrap;
+  }
+  /* ====================== Restaurant Listing ====================== */
+  #restaurants-list {
+    background-color: #f3f3f3;
+    list-style: outside none none;
+    margin: 0;
+    padding: 30px 15px 60px;
+    text-align: center;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+  }
+  #restaurants-list li {
+    background-color: #fff;
+    border: 2px solid #ccc;
+    font-family: Arial, sans-serif;
+    margin: 15px;
+    min-height: 380px;
+    padding: 0 30px 25px;
+    text-align: left;
+    width: 270px;
+    display: flex;
+    flex-wrap: wrap;
+  }
+  #restaurants-list .restaurant-img {
+    background-color: #ccc;
+    display: block;
+    margin: 0;
+    max-width: 100%;
+    min-height: 248px;
+    min-width: 100%;
+    object-fit: contain;
+  }
+  #restaurants-list li h1 {
+    color: #f18200;
+    font-family: Arial, sans-serif;
+    font-size: 14pt;
+    font-weight: 200;
+    letter-spacing: 0;
+    line-height: 1.3;
+    margin: 20px 0 10px;
+    text-transform: uppercase;
+    display: flex;
+    flex-wrap: wrap;
+  }
+  #restaurants-list p {
+    margin: 0;
+    font-size: 11pt;
+    display: flex;
+    flex-wrap: wrap;
+  }
+  #restaurants-list li a {
+    background-color: orange;
+    border-bottom: 3px solid #eee;
+    color: #fff;
+    display: inline-block;
+    font-size: 10pt;
+    margin: 15px 0 0;
+    padding: 8px 30px 10px;
+    text-align: center;
+    text-decoration: none;
+    text-transform: uppercase;
+    display: flex;
+    flex-wrap: wrap;
+  }
+  /* ====================== Restaurant Details ====================== */
+  .inside header {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 1000;
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .inside #map-container {
+    background: blue none repeat scroll 0 0;
+    height: 87%;
+    position: fixed;
+    right: 0;
+    top: 80px;
+    width: 50%;
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .inside #map {
+    background-color: #ccc;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .inside #footer {
+    bottom: 0;
+    position: relative;
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+  }
+  #restaurant-name {
+    color: #f18200;
+    font-family: Arial, sans-serif;
+    font-size: 20pt;
+    font-weight: 200;
+    letter-spacing: 0;
+    margin: 15px 0 30px;
+    text-transform: uppercase;
+    line-height: 1.1;
+    display: flex;
+    flex-wrap: wrap;
+  }
+  #restaurant-img {
+    max-width: 100%;
+    object-fit: contain;
+    display: flex;
+  }
+  #restaurant-address {
+    font-size: 12pt;
+    margin: 10px 0px;
+    display: flex;
+  }
+  #restaurant-cuisine {
+    background-color: #333;
+    color: #ddd;
+    font-size: 12pt;
+    font-weight: 300;
+    letter-spacing: 10px;
+    margin: 0 0 20px;
+    padding: 2px 0;
+    text-align: center;
+    text-transform: uppercase;
+    width: 90%;
+  }
+  #restaurant-container,
+  #reviews-container {
+    border-bottom: 1px solid #d9d9d9;
+    border-top: 1px solid #fff;
+    padding: 140px 40px 30px;
+    width: 50%;
+  }
+  #reviews-container {
+    padding: 30px 40px 80px;
+  }
+  #reviews-container h2 {
+    color: #f58500;
+    font-size: 24pt;
+    font-weight: 300;
+    letter-spacing: -1px;
+    padding-bottom: 1pt;
+  }
+  #reviews-list {
+    margin: 0;
+    padding: 0;
+  }
+  #reviews-list li {
+    background-color: #fff;
+    border: 2px solid #f3f3f3;
+    display: block;
+    list-style-type: none;
+    margin: 0 0 30px;
+    overflow: hidden;
+    padding: 0 20px 20px;
+    position: relative;
+    width: 85%;
+  }
+  #reviews-list li p {
+    margin: 0 0 10px;
+  }
+  #restaurant-hours td {
+    color: #666;
+  }
