--- a/css/styles.css
+++ b/css/styles.css
@@ -8,8 +8,19 @@
   flex-direction: column;
 } */
 
-body,
-td,
+body {
+  background-color: #fdfdfd;
+  margin: 0;
+    font-family: Arial,
+    Helvetica,
+    sans-serif;
+    font-size: 10pt;
+    color: #333;
+    line-height: 1.5;
+    flex-wrap: wrap;
+}
+
+  td,
 th,
 p {
   font-family: Arial, Helvetica, sans-serif;
@@ -17,12 +28,6 @@ p {
   color: #333;
   line-height: 1.5;
   flex-wrap: wrap;
-}
-
-body {
-  background-color: #fdfdfd;
-  margin: 0;
-  /* position: relative; */
 }
 
 ul,
@@ -33,6 +38,8 @@ li {
   flex-direction: column;
   display: flex;
   flex-wrap: wrap;
+  padding-left: 40px;
+  padding-right: 40px;
 }
 
 a {
@@ -53,6 +60,8 @@ a:focus {
 a img {
   border: none 0px #fff;
   object-fit: contain;
+      max-width: 100%;
+      max-height: 100%;
 }
 
 h1,
@@ -138,16 +147,13 @@ nav h1 a {
   background-color: #eee;
   font-size: 17px;
   margin: 0;
-  width: calc(50% - 80px);
-  display: flex;
-  flex-wrap: wrap;
+
 }
 
 /* Display list items side by side */
 
 #breadcrumb li {
-  display: flex;
-  flex-wrap: wrap;
+
 }
 
 /* Add a slash symbol (/) before/behind each list item */
@@ -156,8 +162,7 @@ nav h1 a {
   padding: 8px;
   color: black;
   content: "/\00a0";
-  display: flex;
-  flex-wrap: wrap;
+
 }
 
 /* Add a color to all links inside the list */
@@ -165,8 +170,7 @@ nav h1 a {
 #breadcrumb li a {
   color: #0275d8;
   text-decoration: none;
-  display: flex;
-  flex-wrap: wrap;
+
 }
 
 /* Add a color on mouse-over */
@@ -174,8 +178,7 @@ nav h1 a {
 #breadcrumb li a:hover {
   color: #01447e;
   text-decoration: underline;
-  display: flex;
-  flex-wrap: wrap;
+
 }
 
 /* ====================== Map ====================== */
@@ -245,8 +248,7 @@ nav h1 a {
     background-color: #ccc;
     display: block;
     margin: 0;
-    max-width: 100%;
-    min-height: 248px;
+    min-height: 100px;
     min-width: 100%;
     object-fit: contain;
   }
@@ -329,6 +331,7 @@ nav h1 a {
   }
   #restaurant-img {
     max-width: 100%;
+    max-height: 100%
     object-fit: contain;
     display: flex;
   }
